# fast_ambi

./: Cargo.toml  README.md
arduino/ambilight/: ambilight.ino
src/: main.rs
