[package]
name = "fast-ambi"
version = "0.1.0"
edition = "2021"
links = "X11"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
itertools = "0.11.0"
libc = "0.2.147"
rand = "0.8.5"
scrap = "0.5.0"
screenshots = "0.8.2"
x11 = "2.21.0"


[profile.release]
debug = true
